# commodity-briefing-agent

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  scratch.py
.claude/: settings.json
.claude/agents/: code-optimiser.md  code-reviewer.md  codebase-review.md  devops-reviewer.md  doc-generator.md  linter.md  phase-acceptance.md  refactorer.md  test-generator.md
.claude/commands/: create_worktree.md  merge_worktree.md
.githooks/: pre-commit
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: lint.yml
docs/: README.md  process.md
docs/decisions/: 0001-single-reresearch-path.md
docs/retrospectives/: phase-1-retrospective.md  phase-2-retrospective.md  phase-3-retrospective.md  when-this-pattern-earns-its-keep.md
docs/tutorials/: 01-orientation.md  02-environment-setup.md  03-graph-design.md  05-news-research.md  06-bounded-research.md  07-synthesise.md  12-deliver.md  13-architecture.md  README.md
docs/tutorials/phase-1/: 01-orientation.md  02-environment-setup.md  03-graph-design.md  04-plan-and-price.md  08-cross-check.md  09-re-research.md  10-draft.md  11-sense-check-and-revise.md  README.md
docs/tutorials/phase-2/: 01-orientation.md  02-environment-setup.md  03-design.md  04-research-data-sources.md  05-synthesis-layer.md  06-rendering-layer.md  07-orchestrator.md  README.md
docs/tutorials/phase-3/: 01-orientation.md  02-environment-setup.md  03-design.md  04-news-research.md  05-parallel-specialists.md  06-synthesis-layer.md  07-draft.md  08-final-brief.md  09-deployment.md  README.md
phase1-langgraph/: README.md
phase1-langgraph/src/briefing_agent/: graph.py  nodes.py  state.py
phase1-langgraph/src/briefing_agent/data_sources/: prices.py
phase1-langgraph/src/briefing_agent/prompts/: __init__.py  catalysts.md  deliver.md  news.md  plan.md  sense_check.md  (+1 more)
phase1-langgraph/tests/: test_draft.py  test_research_catalysts.py  test_research_news.py  test_sense_check.py
phase2-strands-bedrock/: README.md  env-example.txt  pyproject.toml  verify_setup.py
phase2-strands-bedrock/docs/: observations.md
phase2-strands-bedrock/src/briefing_agent/: final_brief.py  hello.py  orchestrator.py  smoke_cross_check.py  smoke_draft.py  smoke_fetch_price.py  smoke_orchestrator.py  smoke_orchestrator_failure.py  smoke_orchestrator_failure_sense.py  smoke_research_catalysts.py  smoke_research_geo.py  smoke_research_news.py  smoke_revise.py  smoke_sense_check.py  smoke_synthesise.py  tools.py
phase2-strands-bedrock/src/briefing_agent/prompts/: __init__.py  cross_check.md  geopolitics.md  orchestrator.md  sense_check.md
phase2-strands-bedrock/src/briefing_agent/specialists/: cross_check.py  draft.py  research_catalysts.py  research_geo.py  research_news.py  revise.py  sense_check.py  synthesise.py
phase3-vertex-gemini/: README.md  env-example.txt  pyproject.toml  verify-setup.py
phase3-vertex-gemini/docs/: observations.md
phase3-vertex-gemini/src/briefing_agent/: deploy.py  models.py  orchestrator.py  runner.py  smoke_cross_check.py  smoke_deployed_orchestrator.py  smoke_draft.py  smoke_fetch_price.py  smoke_orchestrator.py  smoke_rendering_loop.py  smoke_research_catalysts.py  smoke_research_geo.py  smoke_research_news.py  smoke_research_parallel.py  smoke_sense_check.py  smoke_synthesis_loop.py  smoke_synthesise.py  tools.py
phase3-vertex-gemini/src/briefing_agent/prompts/: __init__.py  catalysts.md  cross_check.md  draft.md  news.md  revise.md  sense_check.md  synthesise.md
phase3-vertex-gemini/src/briefing_agent/specialists/: cross_check.py  draft.py  final_brief.py  research_catalysts.py  research_geo.py  research_news.py  revise.py  sense_check.py  synthesise.py
phase3-vertex-gemini/src/briefing_agent/workflows/: rendering_loop.py  research_parallel.py  synthesis_loop.py
src/briefing_agent/: graph.py  main.py  nodes.py  state.py
src/briefing_agent/data_sources/: prices.py
src/briefing_agent/prompts/: __init__.py  catalysts.md  cross_check.md  deliver.md  draft.md  geopolitics.md  news.md  plan.md  revise.md  sense_check.md  synthesise.md
tests/: test_cross_check.py  test_deliver.py  test_draft.py  test_prices.py  test_re_research.py  test_research_catalysts.py  test_research_geo.py  test_research_news.py  test_sense_check.py  test_synthesise.py
