[project]
name = "langchain-commodity-briefing-agent"
version = "0.1.0"
description = "A daily commodity research agent built with LangGraph, deployed across Anthropic, Bedrock, and Vertex for comparison."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.16",
    "langchain-anthropic>=1.4.2",
    "langgraph>=1.1.10",
    "langsmith>=0.7.38",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefing_agent"]
