[project]
name = "briefing-agent-phase2"
version = "0.1.0"
description = "Phase 2: Strands Agents on Bedrock AgentCore Runtime, Claude via Bedrock, agents-as-tools pattern."
requires-python = ">=3.12"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
timeout = 120

[tool.hatch.build.targets.wheel]
packages = ["src/briefing_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import sorting)
    "B",   # bugbear (common bugs and design issues)
    "UP",  # pyupgrade (modernise syntax for the target Python version)
    "C4",  # comprehensions (cleaner list/dict/set comprehensions)
    "SIM", # simplify (straightforward refactors)
]
ignore = [
    # Add ignores here if specific rules become noisy. Empty for now —
    # tighten the net first, loosen only when there's a concrete reason.
]

[tool.ruff.lint.per-file-ignores]
# Tests can have longer lines and unused imports for fixtures.
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
