[project]
name = "briefing-agent"
version = "0.1.0"
description = "Phase 3 — Commodity briefing agent on Vertex AI Agent Engine with Gemini."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-adk",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefing_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter where reasonable)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
